--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   prompts: ^2.0.0
   googleapis: ^12.0.0
   googleapis_auth: ^1.4.1
+  process_run: ^0.13.3
+  dartx: ^1.2.0
 
 dev_dependencies:
   lints: ^2.1.0
